start of tic tac toe code

--- a/DC/tictactoe/index.html
+++ b/DC/tictactoe/index.html
@@ -7,7 +7,8 @@
     <body>
         <div class="container">
             <h1 class="text-center">TicTacToe</h1>
-
+            <h3 id="playersturn" class="text-left blinking">Player 1's Turn!</h3>
+            <h3 id="scoreboard"></h3>
             <div id="board"></div>
 <!--             <div class="row">
                 <div class="col border boardpiece">Row 1 Column 0</div>
